default/objects/Credit_Black_List_Company__c/Credit_Black_List_Company__c.object-meta.xml
<CustomObject>
    <label>Credit Black List Company</label>
    <nameField>
        <label>Credit Black List Company Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Credit Black List Companies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>