default/objects/Credit_Black_List_Company__c/fields/Additional_Contact__c.field-meta.xml
<CustomField>
    <fullName>Additional_Contact__c</fullName>
    <label>Additional Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>