default/objects/Credit_Black_List_Company__c/fields/Authorised_Contact__c.field-meta.xml
<CustomField>
    <fullName>Authorised_Contact__c</fullName>
    <label>Authorised Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>