default/objects/Credit_Black_List_Company__c/fields/Birth_Date__c.field-meta.xml
<CustomField>
    <fullName>Birth_Date__c</fullName>
    <label>Birth Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>