default/objects/Credit_Black_List_Company__c/fields/Card_Delivery_Address_Lines__c.field-meta.xml
<CustomField>
    <fullName>Card_Delivery_Address_Lines__c</fullName>
    <label>Card Delivery Address Lines</label>
    <length>255</length>
    <type>Text</type>
</CustomField>