default/objects/Credit_Black_List_Company__c/fields/Card_Delivery_City__c.field-meta.xml
<CustomField>
    <fullName>Card_Delivery_City__c</fullName>
    <label>Card Delivery City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>