default/objects/Credit_Black_List_Company__c/fields/Card_Delivery_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Card_Delivery_Zip_Code__c</fullName>
    <label>Card Delivery Zip Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>