default/objects/Credit_Black_List_Company__c/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <label>Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>