default/objects/Credit_Black_List_Company__c/fields/Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>Customer_Id__c</fullName>
    <label>Customer Id</label>
    <length>2</length>
    <type>Text</type>
</CustomField>