default/objects/Credit_Black_List_Company__c/fields/Director_Contact__c.field-meta.xml
<CustomField>
    <fullName>Director_Contact__c</fullName>
    <label>Director Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>