default/objects/Credit_Black_List_Company__c/fields/Financial_Contact__c.field-meta.xml
<CustomField>
    <fullName>Financial_Contact__c</fullName>
    <label>Financial Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>