default/objects/Credit_Black_List_Company__c/fields/Main_Address_Address_Lines__c.field-meta.xml
<CustomField>
    <fullName>Main_Address_Address_Lines__c</fullName>
    <label>Main Address Address Lines</label>
    <length>255</length>
    <type>Text</type>
</CustomField>