default/objects/Credit_Black_List_Company__c/fields/Main_Address_City__c.field-meta.xml
<CustomField>
    <fullName>Main_Address_City__c</fullName>
    <label>Main Address City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>