default/objects/Credit_Black_List_Company__c/fields/Main_Address_Country__c.field-meta.xml
<CustomField>
    <fullName>Main_Address_Country__c</fullName>
    <label>Main Address Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>