default/objects/Credit_Black_List_Company__c/fields/Main_Address_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Main_Address_Zip_Code__c</fullName>
    <label>Main Address Zip Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>