default/objects/Credit_Black_List_Company__c/fields/PIN_Delivery_Address_Lines__c.field-meta.xml
<CustomField>
    <fullName>PIN_Delivery_Address_Lines__c</fullName>
    <label>PIN Delivery Address Lines</label>
    <length>255</length>
    <type>Text</type>
</CustomField>