default/objects/Credit_Black_List_Company__c/fields/PIN_Delivery_City__c.field-meta.xml
<CustomField>
    <fullName>PIN_Delivery_City__c</fullName>
    <label>PIN Delivery City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>