default/objects/Credit_Black_List_Company__c/fields/PIN_Delivery_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>PIN_Delivery_Zip_Code__c</fullName>
    <label>PIN Delivery Zip Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>