default/objects/Credit_Black_List_Company__c/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <label>Primary Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>