default/objects/Credit_Black_List_Company__c/fields/Primary_Phone__c.field-meta.xml
<CustomField>
    <fullName>Primary_Phone__c</fullName>
    <label>Primary Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>