default/objects/Credit_Black_List_Company__c/fields/Reg_Address_Address_Lines__c.field-meta.xml
<CustomField>
    <fullName>Reg_Address_Address_Lines__c</fullName>
    <label>Reg Address Address Lines</label>
    <length>255</length>
    <type>Text</type>
</CustomField>