default/objects/Credit_Black_List_Company__c/fields/Reg_Address_City__c.field-meta.xml
<CustomField>
    <fullName>Reg_Address_City__c</fullName>
    <label>Reg Address City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>