default/objects/Credit_Black_List_Company__c/fields/Reg_Address_Country__c.field-meta.xml
<CustomField>
    <fullName>Reg_Address_Country__c</fullName>
    <label>Reg Address Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>