default/objects/Credit_Black_List_Company__c/fields/Reg_Address_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Reg_Address_Zip_Code__c</fullName>
    <label>Reg Address Zip Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>