default/objects/Credit_Black_List_Company__c/fields/TAX_ID__c.field-meta.xml
<CustomField>
    <fullName>TAX_ID__c</fullName>
    <label>TAX ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>