default/objects/Credit_Black_List_Company__c/fields/VATReg_Number__c.field-meta.xml
<CustomField>
    <fullName>VATReg_Number__c</fullName>
    <label>VATReg Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>