default/objects/Credit_Black_List_Company__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Customer_Full_Name__c</columns>
    <columns>Customer_Id__c</columns>
    <columns>IBAN__c</columns>
    <columns>Primary_Contact__c</columns>
    <columns>Primary_Email__c</columns>
    <columns>Primary_Phone__c</columns>
    <columns>Trade_Register_Number__c</columns>
    <columns>VATReg_Number__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>